fixing menu layout issue

--- a/app/assets/css/base/_base.scss
+++ b/app/assets/css/base/_base.scss
@@ -10,7 +10,7 @@
 :focus {
   outline: 0;
   border: none;
-  color: rgba(255, 255, 255, 0);
+  color: rgba($black, 1);
 }
 
 div {
