--- a/app/assets/css/base/_colors.scss
+++ b/app/assets/css/base/_colors.scss
@@ -21,3 +21,4 @@ $ios-background: #62BEC7;
 $android-background: #95E6A0;
 
 $white: #ffffff;
+$black: #000000;
