--- a/app/assets/css/modules/_modules.scss
+++ b/app/assets/css/modules/_modules.scss
@@ -118,10 +118,6 @@
 
 // Main Navigation menu ============================================================
 .main-nav {
-  position: absolute;
-  top: -100px;
-  left: 0;
-  z-index: 900;
   width: 100%;
   transition: background .5s;
   padding: 10px 0;
